[tool.poetry]
name = "tf2-utils"
version = "0.1.0"
description = ""
authors = ["Simon Hawe <simon.hawe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
matplotlib = "^3.1"
tqdm = "^4.36"
pandas = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "^19.3b0", python = "^3.7" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
